--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 .pioenvs
 .piolibdeps
 #
-# Last update: Sun Nov 21 23:30:02 JST 2021 by @hohno_at_kuimc
+# Last updated: Sun Nov 21 23:30:02 JST 2021 by @hohno_at_kuimc
 #
 .DS_Store
 \#*.*
